# mono2d-body-detection

./: CHANGELOG.md  CMakeLists.txt  README.md  package.xml
include/: mono2d_body_det_node.h
launch/: mono2d_body_detection.launch.py
src/: main.cpp  mono2d_body_det_node.cpp
